Criação do banco

--- a/style.css
+++ b/style.css
@@ -8,6 +8,7 @@ form input, form select, form button{
     margin: 5px 0;
     width: 100%;
     padding: 10 px;
+    box-sizing: border-box;
 }
 ul {
     list-style: nome;
